devel
-----

* Updated arangosync to v2.12.0-preview-2.

* ArangoSearch nested search feature. (Enterprise Edition): Added ability to index
  and search nested documents with ArangoSearch views.

* Fixed handling of illegal edges in Enterprise Graphs. Adding an edge to a SmartGraph
  vertex collection through document API caused incorrect sharding of the edge. Now
  this edge is rejected as invalid. (BTS-906)

* Removed unused log topics "CLUSTERCOMM", "COLLECTOR" and "PERFORMANCE" from
  the code.

* Added ALL_SHORTEST_PATHS functionality to find all shortest paths between two
  given documents.

* Added another test for computedValues attribute keepNull.

* BTS-913: check for proper timezone setup of the system on startup.
  This will then log errors that else would only occur in AQL-Functions at
  runtime.

* Changed rocksdb default compression type from snappy to lz4.

* Fixed a potential deadlock in RocksDB compaction.
  For details see https://github.com/facebook/rocksdb/pull/10355

* Added more specific process exit codes for arangod and all client tools,
  and changed the executables' exit code for the following situations:
  
  - an unknown startup option name is used: previously the exit code was 1.
    Now the exit code when using an invalid option is 3 (symbolic exit code 
    name EXIT_INVALID_OPTION_NAME).
  - an invalid value is used for a startup option (e.g. a number that is 
    outside the allowed range for the option's underlying value type, or a 
    string value is used for a numeric option): previously the exit code was
    1. Now the exit code for these case is 4 (symbolic exit code name
    EXIT_INVALID_OPTION_VALUE).
  - a config file is specified that does not exist: previously the exit code
    was either 1 or 6 (symbolic exit code name EXIT_CONFIG_NOT_FOUND). Now
    the exit code in this case is always 6 (EXIT_CONFIG_NOT_FOUND).
  - a structurally invalid config file is used, e.g. the config file contains